# clean-view-ai

./: .env.example  .gitignore  README.md  build.gradle  package-lock.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
ai-engine/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
ai-engine/alembic/: env.py
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend-rust/migrations/: 01_init.sql
backend-rust/src/: main.rs  router.rs
backend-rust/src/config/: app.rs
backend-rust/src/dto/: mod.rs
backend-rust/src/dto/request/: auth.rs  chat.rs  memory.rs  mod.rs  session.rs
backend-rust/src/dto/response/: auth.rs  chat.rs  memory.rs  mod.rs  session.rs  trace.rs
backend-rust/src/error/: app_error.rs
backend-rust/src/handler/: auth.rs  chat.rs  health.rs  memory.rs  mod.rs  session.rs  trace.rs
backend-rust/src/middleware/: auth.rs
backend-rust/src/model/: chat_message.rs  chat_session.rs  chat_session_block.rs  memory.rs  mod.rs  user.rs
backend-rust/src/repository/: chat_message_repo.rs  chat_session_block_repo.rs  chat_session_repo.rs  memory_repo.rs  mod.rs  user_repo.rs
backend-rust/src/service/: auth_service.rs  chat_service.rs  chat_session_block_service.rs  chat_session_service.rs  memory_service.rs  mod.rs  trace_service.rs
backend-rust/src/util/: jwt.rs
frontend/: index.html  package-lock.json  package.json
src/: App.jsx  index.css  main.jsx
(+100 files in other folders)
